# KaggleSandbox

AllstateClaimsSeverity/: claim_model.Rmd  claim_model_incremental.Rmd  claim_model_segmented.Rmd  claim_model_utils.R
Amex/: amex.lgb.Rmd  amex_metric.R
Clicks/: clicks_model.Rmd
Earthquake/: earthquake_analysis.Rmd  resample_data.py
Examples/: BayesianOptimization_example_1d.R  Periodogram.Rmd  bench_timing.R  beta_conf.Rmd  binomial_confidence.R  binomial_regression.R  bspline_primer.R  cat_features_primer.Rmd  clustering.Rmd  compress_files.R  em_mixture.R  evaluation_metrics.Rmd  gbm_tuning.Rmd  ggplot_color_scales.Rmd  ggplot_color_scales.html  ggplot_example.Rmd  glm_with_offset.R  hboost.R  keras_primer.R  knn_example.R  lasso_primer.R  multi_logit.Rmd  overfitting.Rmd  pdf_reports.R  regression_example.Rmd  regression_examples.Rmd  regression_swirl.Rmd  sampling.R  survival_example.Rmd  transition_matrix_analysis.Rmd  transition_matrix_analysis.xlsx  tsne.R  tsp_primer.Rmd  tsp_primer_clustering.R  umap_example.R  variable_importance.Rmd  wavelet_primer.Rmd  weights_reg.R  xgboost_bopt.R  xgboost_example.R  (+1 more)
HomeAssistant/: EnviromentMonitoring.Rmd  TempMonitoring.Rmd
Home_Credit_Default_Risk/: home_credit_model.Rmd
House Prices/: house_prices.R  house_prices.Rmd
LendingClub/: LendingClub.Rmd  LendingClubRejects.Rmd
Playground/: mixture_model.R  playground_apr.lgb.Rmd  playground_aug.lgb.Rmd  playground_aug.rbf.Rmd  playground_feb.lgb.Rmd  playground_feb.rbf.Rmd  (+7 more)
Santa2019/optimizer/: CMakeLists.txt  Request.cpp  Request.h  build.sh  main.cpp
(+159 files in other folders)
